--- a/screen.css
+++ b/screen.css
@@ -49,9 +49,18 @@ table {
 
 /* Above is CSS Reset, below starts project 1 CSS*/
 
+/* 18px = 1em*/
+
 #main {
 	background-color: #12538F;
-	min-height: 20em;
+	min-height: 40em;
+}
+
+#main h1 {
+	font-family: 'Tangerine', cursive;
+	font-size: 15vw;
+	text-align: center;
+	padding-top: 3em;
 }
 
 #staff {
@@ -74,9 +83,23 @@ table {
 	min-height: 20em;
 }
 
+@media screen and (min-width: 27.50em) {  /*440px*/
 
+#main h1 {
+	font-family: 'Tangerine', cursive;
+	font-size: 15vw;
+	text-align: center;
+	padding-top: 2em;
+}
 
+@media screen and (min-width: 50em) { /*800px*/
 
+#main h1 {
+    font-family: 'Tangerine', cursive;
+	font-size: 15vw;
+	text-align: center;
+	padding-top: 1em;
+}
 
 
 
